syntax = "proto3";
package cart;

service CartService {
  rpc AddToCart (AddToCartRequest) returns (AddToCartResponse);
  rpc GetCart (GetCartRequest) returns (GetCartResponse);
}

message AddToCartRequest {
  string userId = 1;
  string skuId = 2;
  int32 quantity = 3;
  double price = 4;
  ItemDetail itemDetail = 5;
}

message ItemDetail {
  string name = 1;
  double price = 2;
  string skuCode = 3;
  int32 stock = 4;
  map<string, string> options = 5; 
}

message AddToCartResponse {
  string message = 1;
}

message GetCartRequest {
  string userId = 1;
}

message CartItem {
  string productId = 1;
  string skuId = 2;
  string name = 3;
  string image = 4;
  int32 quantity = 5;
  double price = 6;
  map<string, string> options = 7;
}

message GetCartResponse {
  repeated CartItem items = 1;
}